--- a/src/styles/Month.css
+++ b/src/styles/Month.css
@@ -44,6 +44,47 @@
   position: relative;
 }
 
+/* Bicolor day styling */
+.bicolor-day {
+  padding: 0;
+  overflow: hidden;
+  position: relative;
+}
+
+.bicolor-day .day-content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 2;
+  color: #fff;
+  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.7);
+  font-weight: bold;
+}
+
+.bicolor-day .primary-color,
+.bicolor-day .alt-color {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.bicolor-day .primary-color {
+  clip-path: polygon(100% 0%, 100% 100%, 0% 100%);
+  bottom: 0;
+  right: 0;
+}
+
+.bicolor-day .alt-color {
+  clip-path: polygon(0% 0%, 100% 0%, 0% 100%);
+  top: 0;
+  left: 0;
+}
+
 .day:not(.empty):hover {
   transform: scale(1.1);
   z-index: 1;
