--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,15 @@
   margin-bottom: 8px;
 }
 
+.app-description small:last-child {
+  display: inline-block;
+  margin-top: 5px;
+  background-color: #f9f9f9;
+  padding: 4px 8px;
+  border-radius: 4px;
+  border: 1px solid #eaeaea;
+}
+
 .controls {
   display: flex;
   align-items: center;
